--- a/Qualitative_results.ipynb
+++ b/Qualitative_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,18 @@
     "from scipy.spatial.distance import pdist\n",
     "\n",
     "with open('/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_Kmeans_dis_ntresh_discrete/train_Kmeans_dis_ntresh_discrete.pkl', 'rb') as f:\n",
-    "    train_graph = pickle.load(f)"
+    "    train_graph = pickle.load(f)\n",
+    "\n",
+    "with open('/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_TEXT_Kmeans_dis_ntresh_discrete/train_TEXT_Kmeans_dis_ntresh_discrete.pkl', 'rb') as f:\n",
+    "    train_text = pickle.load(f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -89,16 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dgl\n",
+    "\n",
+    "a, _ = dgl.load_graphs('/home/nbiescas/Desktop/CVC/CVC_internship/runs/run128/graphs_contrastive/train_contrastive.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "32"
+       "33"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,179 +144,236 @@
     "            t += graph.edata[e].shape[-1]\n",
     "    return t\n",
     "\n",
-    "obtain_size(train_graph[0],  ['Geometric'],['angle', 'discrete_bin_edges', 'feat'])"
+    "node = ['Geometric']\n",
+    "edge = ['distance_not_tresh', 'angle', 'discrete_bin_edges', 'feat']\n",
+    "obtain_size(train_text[0], node, edge)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([0.6680, 0.7054, 0.2541, 0.7952, 0.2120, 0.0303, 0.9888, 0.7006, 0.8004,\n",
-       "        0.0000, 0.7803, 0.0000, 0.0000, 0.6800, 1.1624, 0.2505, 0.5688, 0.9027,\n",
-       "        0.5977, 0.9659, 1.0346, 0.9046, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "        0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "        0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "        0.0228, 0.0687, 0.1809, 0.4672, 0.6158, 0.6468, 0.6294, 0.6389, 0.4659,\n",
-       "        0.8809, 0.8525, 0.8887, 0.3869, 0.7557, 0.7504, 0.3203, 0.5170, 0.9318,\n",
-       "        0.5710, 0.2858, 0.6219, 0.5258, 0.5961, 0.4232, 0.6519, 0.7075, 0.5009,\n",
-       "        0.5821, 0.9161, 0.8947, 0.8805, 0.7940, 0.7975, 0.7718, 0.7182, 0.7595,\n",
-       "        0.6371, 0.6097, 0.7400, 0.7308])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nbiescas/miniconda3/envs/doc2graph/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
     }
    ],
    "source": [
-    "l, _ = dgl.load_graphs('/home/nbiescas/Desktop/CVC/CVC_internship/runs/run90_final/graphs_contrastive/train_contrastive.bin')\n",
-    "\n",
-    "l[0].ndata['feat'][:, -4]"
+    "import dgl\n",
+    "import torch\n",
+    "import pickle\n",
+    "from V2_contrastive_datasets import vector_func\n",
+    "from functools import partial\n",
+    "from utils import LoadConfig\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['feat', 'distance_not_tresh', 'weights', 'label', 'angle', 'distance', 'discrete_bin_edges'])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_graph[0].edata.keys()"
+    "pickle_path_train_kmeans = '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_TEXT_Kmeans_dis_ntresh_discrete/train_TEXT_Kmeans_dis_ntresh_discrete.pkl'\n",
+    "pickle_path_val_kmeans = '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_TEXT_Kmeans_dis_ntresh_discrete/val_TEXT_Kmeans_dis_ntresh_discrete.pkl'\n",
+    "pickle_path_test_kmeans = '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_TEXT_Kmeans_dis_ntresh_discrete/test_TEXT_Kmeans_dis_ntresh_discrete.pkl'\n",
+    "\n",
+    "with open(pickle_path_train_kmeans, 'rb') as f, open(pickle_path_val_kmeans, 'rb') as g, open(pickle_path_test_kmeans, 'rb') as h:\n",
+    "    train_graph = pickle.load(f)\n",
+    "    val_graph = pickle.load(g)\n",
+    "    test_graph = pickle.load(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/Only_edgeFeatContra_TEXT/train_TEXT_only_edgeFeatContra.bin'\n",
+    "graphs, _ = dgl.load_graphs(path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_graph[0].ndata['regional_encoding'] = train_graph[0].ndata['Geometric'][:, 5:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.2966, 0.4120, 0.3530, 0.4230],\n",
-       "        [0.6824, 0.4110, 0.7270, 0.4240],\n",
-       "        [0.6640, 0.3560, 0.7205, 0.3670],\n",
-       "        [0.0459, 0.3090, 0.1890, 0.3400],\n",
-       "        [0.2730, 0.1450, 0.3281, 0.1590],\n",
-       "        [0.2717, 0.1720, 0.3491, 0.1830],\n",
-       "        [0.3241, 0.1960, 0.3937, 0.2070],\n",
-       "        [0.3228, 0.2210, 0.3871, 0.2350],\n",
-       "        [0.1115, 0.0200, 0.1614, 0.0370],\n",
-       "        [0.0472, 0.0100, 0.0735, 0.0180],\n",
-       "        [0.0735, 0.0770, 0.1483, 0.0840],\n",
-       "        [0.2743, 0.0570, 0.9396, 0.1310],\n",
-       "        [0.8583, 0.0100, 0.9383, 0.0740],\n",
-       "        [0.4055, 0.1340, 0.8255, 0.1550],\n",
-       "        [0.4108, 0.1650, 0.5696, 0.1810],\n",
-       "        [0.4055, 0.1910, 0.6811, 0.2100],\n",
-       "        [0.4068, 0.2180, 0.5420, 0.2330],\n",
-       "        [0.2297, 0.2400, 0.8307, 0.2570],\n",
-       "        [0.2310, 0.2710, 0.4567, 0.2840],\n",
-       "        [0.4711, 0.2960, 0.6824, 0.3110],\n",
-       "        [0.4711, 0.3240, 0.6969, 0.3420],\n",
-       "        [0.7362, 0.3510, 0.8386, 0.3680],\n",
-       "        [0.7664, 0.4080, 0.8924, 0.4240],\n",
-       "        [0.4055, 0.4090, 0.5302, 0.4240],\n",
-       "        [0.0709, 0.4390, 0.1719, 0.4530],\n",
-       "        [0.0446, 0.1520, 0.2073, 0.2230],\n",
-       "        [0.0472, 0.0940, 0.1890, 0.1390]])"
+       "torch.Size([27, 317])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_graph[0].ndata['geom']"
+    "graphs[0].ndata['feat'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23278051"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "from src.models.all_models import MaskedGat_contrastive\n",
+    "def count_parameters(model):\n",
+    "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "\n",
+    "config = LoadConfig('run144')\n",
+    "model_params = torch.load('/home/nbiescas/Desktop/CVC/CVC_internship/runs/run145/weights/epoch_1481.pth')\n",
+    "model = MaskedGat_contrastive(**config)\n",
+    "model.load_state_dict(model_params)\n",
+    "count_parameters(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = torch.load('/home/nbiescas/Desktop/CVC/CVC_internship/runs/run109/weights/model_71.pth').to('cuda:0')\n",
+    "\n",
+    "pickle_path_train_kmeans = '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_TEXT_Kmeans_dis_ntresh_discrete/train_TEXT_Kmeans_dis_ntresh_discrete.pkl'\n",
+    "pickle_path_val_kmeans = '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_TEXT_Kmeans_dis_ntresh_discrete/val_TEXT_Kmeans_dis_ntresh_discrete.pkl'\n",
+    "pickle_path_test_kmeans = '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_TEXT_Kmeans_dis_ntresh_discrete/test_TEXT_Kmeans_dis_ntresh_discrete.pkl'\n",
+    "\n",
+    "with open(pickle_path_train_kmeans, 'rb') as f, open(pickle_path_val_kmeans, 'rb') as g, open(pickle_path_test_kmeans, 'rb') as h:\n",
+    "    train_graph = pickle.load(f)\n",
+    "    val_graph = pickle.load(g)\n",
+    "    test_graph = pickle.load(h)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = LoadConfig('run109')\n",
+    "vector_func_partial = partial(vector_func, config) # Partial function to pass to apply_edges\n",
+    "def update_features(graphs: dgl.graph):\n",
+    "    batch = dgl.batch(graphs)\n",
+    "    batch.apply_edges(vector_func_partial)\n",
+    "    return batch\n",
+    "\n",
+    "train_graphs = update_features(train_graph).to('cuda:0')\n",
+    "val_graphs = update_features(val_graph).to('cuda:0')\n",
+    "test_graphs = update_features(test_graph).to('cuda:0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    train_embeddings = model(train_graphs)\n",
+    "    val_embeddings = model(val_graphs)\n",
+    "    test_embeddings = model(test_graphs)\n",
+    "\n",
+    "train_graphs.ndata['feat'] = torch.cat((train_embeddings, train_graphs.ndata['text_feat']), dim=1)\n",
+    "val_graphs.ndata['feat'] = torch.cat((val_embeddings, val_graphs.ndata['text_feat']), dim=1)\n",
+    "test_graphs.ndata['feat'] = torch.cat((test_embeddings, test_graphs.ndata['text_feat']), dim=1)\n",
+    "\n",
+    "dgl.save_graphs('/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/Only_edgeFeatContra_TEXT/train_TEXT_only_edgeFeatContra.bin', dgl.unbatch(train_graphs))\n",
+    "dgl.save_graphs('/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/Only_edgeFeatContra_TEXT/val_TEXT_only_edgeFeatContra.bin', dgl.unbatch(val_graphs))\n",
+    "dgl.save_graphs('/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/Only_edgeFeatContra_TEXT/test_TEXT_only_edgeFeatContra.bin', dgl.unbatch(test_graphs))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.2966, 0.4120, 0.3530, 0.4230],\n",
-       "        [0.6824, 0.4110, 0.7270, 0.4240],\n",
-       "        [0.6640, 0.3560, 0.7205, 0.3670],\n",
-       "        [0.0459, 0.3090, 0.1890, 0.3400],\n",
-       "        [0.2730, 0.1450, 0.3281, 0.1590],\n",
-       "        [0.2717, 0.1720, 0.3491, 0.1830],\n",
-       "        [0.3241, 0.1960, 0.3937, 0.2070],\n",
-       "        [0.3228, 0.2210, 0.3871, 0.2350],\n",
-       "        [0.1115, 0.0200, 0.1614, 0.0370],\n",
-       "        [0.0472, 0.0100, 0.0735, 0.0180],\n",
-       "        [0.0735, 0.0770, 0.1483, 0.0840],\n",
-       "        [0.2743, 0.0570, 0.9396, 0.1310],\n",
-       "        [0.8583, 0.0100, 0.9383, 0.0740],\n",
-       "        [0.4055, 0.1340, 0.8255, 0.1550],\n",
-       "        [0.4108, 0.1650, 0.5696, 0.1810],\n",
-       "        [0.4055, 0.1910, 0.6811, 0.2100],\n",
-       "        [0.4068, 0.2180, 0.5420, 0.2330],\n",
-       "        [0.2297, 0.2400, 0.8307, 0.2570],\n",
-       "        [0.2310, 0.2710, 0.4567, 0.2840],\n",
-       "        [0.4711, 0.2960, 0.6824, 0.3110],\n",
-       "        [0.4711, 0.3240, 0.6969, 0.3420],\n",
-       "        [0.7362, 0.3510, 0.8386, 0.3680],\n",
-       "        [0.7664, 0.4080, 0.8924, 0.4240],\n",
-       "        [0.4055, 0.4090, 0.5302, 0.4240],\n",
-       "        [0.0709, 0.4390, 0.1719, 0.4530],\n",
-       "        [0.0446, 0.1520, 0.2073, 0.2230],\n",
-       "        [0.0472, 0.0940, 0.1890, 0.1390]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_graph[0].ndata['Geometric'][:, :4]"
+    "import dgl\n",
+    "l, _ = dgl.load_graphs('/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/Only_edgeFeatContra_TEXT/train_TEXT_only_edgeFeatContra.bin')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "383892883"
+       "0.0001"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hash(\"by removing stochasticity\") % 2**32 - 1"
+    "10 ** -4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "CUDA error: invalid device ordinal\nCUDA kernel errors might be asynchronously reported at some other API call,so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch\u001b[39;00m \u001b[39mimport\u001b[39;00m nn\n\u001b[0;32m----> 2\u001b[0m \u001b[39mmap\u001b[39m(nn\u001b[39m.\u001b[39;49mLinear(\u001b[39m*\u001b[39;49m(\u001b[39m100\u001b[39;49m, \u001b[39m100\u001b[39;49m), \u001b[39m*\u001b[39;49m(\u001b[39m400\u001b[39;49m, \u001b[39m440\u001b[39;49m)))\n",
+      "File \u001b[0;32m~/miniconda3/envs/doc2graph/lib/python3.9/site-packages/torch/nn/modules/linear.py:85\u001b[0m, in \u001b[0;36mLinear.__init__\u001b[0;34m(self, in_features, out_features, bias, device, dtype)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39min_features \u001b[39m=\u001b[39m in_features\n\u001b[1;32m     84\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mout_features \u001b[39m=\u001b[39m out_features\n\u001b[0;32m---> 85\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweight \u001b[39m=\u001b[39m Parameter(torch\u001b[39m.\u001b[39;49mempty((out_features, in_features), \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mfactory_kwargs))\n\u001b[1;32m     86\u001b[0m \u001b[39mif\u001b[39;00m bias:\n\u001b[1;32m     87\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbias \u001b[39m=\u001b[39m Parameter(torch\u001b[39m.\u001b[39mempty(out_features, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mfactory_kwargs))\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: CUDA error: invalid device ordinal\nCUDA kernel errors might be asynchronously reported at some other API call,so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1."
+     ]
+    }
+   ],
+   "source": [
+    "from torch import nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([27, 317])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l[0].ndata['feat'].shape"
    ]
   },
   {
